<no.agens.depth.lib.DepthRendrer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="hardware"
    tools:context="io.xujiaji.hnbc.fragments.LoginFragment">

    <include layout="@layout/include_status" />

    <no.agens.depth.lib.DepthLayout
        android:id="@+id/root_dl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layerType="hardware"
        android:layout_below="@+id/status"
        app:custom_elevation="1dp">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/login_card_width"
            android:layout_height="348dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btnRegistered"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/registered"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="30dp"
                    android:src="@mipmap/big_icon" />

                <io.xujiaji.hnbc.widget.TextViewNew
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="32sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameWrapper"
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/username"
                        style="@style/inputEditTextStyle"
                        android:hint="@string/username"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    app:counterEnabled="true"
                    style="@style/textInputLayoutStyle">

                    <EditText
                        android:id="@+id/password"
                        style="@style/inputEditTextStyle"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </no.agens.depth.lib.DepthLayout>

    <no.agens.depth.lib.DepthLayout
        android:id="@+id/appbar"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_below="@+id/root_dl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-38dp"
        android:layerType="hardware"
        app:custom_elevation="1dp"
        app:edge_color="@color/fab"
        app:is_circle="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:clickable="true"
            android:layerType="hardware"
            android:src="@drawable/ic_send_black_24dp"
            app:backgroundTint="@color/theme_red"
            app:borderWidth="1dp"
            app:elevation="0dp"
            app:pressedTranslationZ="0dp" />

        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/google_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            app:type="folding_circles" />
    </no.agens.depth.lib.DepthLayout>

    <no.agens.depth.lib.DepthLayout
        android:id="@+id/dl2"
        android:layout_width="@dimen/login_card_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layerType="hardware"
        app:custom_elevation="0dp"
        app:edge_color="@color/transparent"
        app:is_circle="false">

        <io.xujiaji.hnbc.widget.TextViewNew
            android:id="@+id/tvOtherLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/other_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_level6"
            android:textStyle="bold" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvOtherLogin"
            android:layout_marginStart="160dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnLoginQQ"
                style="@style/FloatingActionButtonLoginStyle"
                android:src="@drawable/ic_qq" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnLoginWeixin"
                style="@style/FloatingActionButtonLoginStyle"
                android:src="@drawable/ic_weixin" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnLoginSina"
                style="@style/FloatingActionButtonLoginStyle"
                android:src="@drawable/ic_sina" />

        </LinearLayout>

    </no.agens.depth.lib.DepthLayout>

</no.agens.depth.lib.DepthRendrer>
